SPARK-1791: Populate plugin.xml from pom.xml
Both the pom.xml file and the plugin.xml file define the plugin name, version and description. It is error prone to keep both files in sync. Instead, the plugin.xml file should be popluated from the data that is in the pom.xml file.

Maven resource filtering is employed for this purpose. The drawback of this approach is that the plugin.xml file needs to be a Maven resource, which makes it part of the jar file. This means that this file is included twice in each plugin: once in the 'outer' plugin jar file, and once in the jar file that contains the plugin's compiled sources.

--- a/plugins/battleships/src/main/plugin-metadata/plugin.xml
+++ b/plugins/battleships/src/main/plugin-metadata/plugin.xml
@@ -1,10 +1,10 @@
 <plugin>
-    <name>Roar!!!</name>
-    <class>org.jivesoftware.spark.roar.Roar</class>
+    <name>${project.name}</name>
+    <version>${project.version}</version>
+    <description>${project.description}</description>
+    <class>battleship.BattleshipPlugin</class>
     <author>Wolf Posdorfer</author>
-    <version>0.5.0</version>
     <homePage>http://www.jivesoftware.com</homePage>
-    <description>Shows awesome Popups</description>
     <email>9posdorf@informatik.uni-hamburg.de</email>
     <minSparkVersion>2.7.0</minSparkVersion>
     <os>Windows,Linux,Mac</os>
