--- a/plugins/tictactoe/src/main/plugin-metadata/plugin.xml
+++ b/plugins/tictactoe/src/main/plugin-metadata/plugin.xml
@@ -1,10 +1,10 @@
 <plugin>
-    <name>TicTacToe of Doom</name>
+    <name>${project.name}</name>
+    <version>${project.version}</version>
+    <description>${project.description}</description>
     <class>tic.tac.toe.TicTacToePlugin</class>
     <author>Wolf Posdorfer</author>
-    <version>0.2</version>
     <homePage>http://www.jivesoftware.com</homePage>
-    <description>The most sophisticated TicTacToe Game ever created</description>
     <email>9posdorf@informatik.uni-hamburg.de</email>
     <minSparkVersion>2.7.0</minSparkVersion>
     <os>Windows,Linux,Mac</os>
