--- a/plugins/apple/src/main/plugin-metadata/plugin.xml
+++ b/plugins/apple/src/main/plugin-metadata/plugin.xml
@@ -1,11 +1,10 @@
-<!-- Define your plugins -->
 <plugin>
-    <name>Mac OSX Plugin</name>
-    <version>2.2</version>
+    <name>${project.name}</name>
+    <version>${project.version}</version>
+    <description>${project.description}</description>
     <author>Wolf Posdorfer</author>
     <homePage>http://www.jivesoftware.com</homePage>
     <email>9posdorf@informatik.uni-hamburg.de</email>
-    <description>Adds MacOSX features to Spark</description>
     <class>com.jivesoftware.spark.plugin.apple.ApplePlugin</class>
     <minSparkVersion>2.7.0</minSparkVersion>
 	<os>Mac</os>
