--- a/plugins/flashing/src/main/plugin-metadata/plugin.xml
+++ b/plugins/flashing/src/main/plugin-metadata/plugin.xml
@@ -1,14 +1,13 @@
 <!-- Define your plugins -->
 <plugin>
-    <name>Spellchecker Plugin</name>
-    <version>0.7</version>
+    <name>${project.name}</name>
+    <version>${project.version}</version>
+    <description>${project.description}</description>
     <author>Michael Will</author>
     <homePage>http://www.igniterealtime.org</homePage>
     <email>michael-will@gmx.net</email>
-    <description>Spellchecker Plugin</description>
-    <class>org.jivesoftware.spellchecker.SpellcheckerPlugin</class>
+    <class>org.jivesoftware.spark.plugin.flashing.FlashingPlugin</class>
     <minSparkVersion>2.7.0</minSparkVersion>
-    <os>Windows,Mac,Linux</os>
+    <os>Windows</os>
     <java>1.7.0</java>
 </plugin>
-
