--- a/plugins/otr/src/main/plugin-metadata/plugin.xml
+++ b/plugins/otr/src/main/plugin-metadata/plugin.xml
@@ -1,11 +1,11 @@
 <!-- Define your plugins -->
 <plugin>
-    <name>OTR Plugin</name>
-    <version>0.5 Beta</version>
+    <name>${project.name}</name>
+    <version>${project.version}</version>
+    <description>${project.description}</description>
     <author>Holger Bergunde</author>
     <homePage>http://www.stytrix.de</homePage>
     <email>holger@bergunde.de</email>
-    <description>Adds OTR support to Spark</description>
     <minSparkVersion>2.7.0</minSparkVersion>
     <java>1.7.0</java>
     <class>org.jivesoftware.spark.otrplug.OTRPlugin</class>
