--- a/plugins/reversi/src/main/plugin-metadata/plugin.xml
+++ b/plugins/reversi/src/main/plugin-metadata/plugin.xml
@@ -1,11 +1,11 @@
 <!-- Define your plugins -->
 <plugin>
-    <name>Reversi</name>
-    <version>1.4</version>
+    <name>${project.name}</name>
+    <version>${project.version}</version>
+    <description>${project.description}</description>
     <author>Matt Tucker, Bill Lynch, Holger Bergunde</author>
     <homePage>http://www.jivesoftware.org</homePage>
     <email>plugins@jivesoftware.org</email>
-    <description>Multiplayer game of Reversi</description>
     <class>org.jivesoftware.game.reversi.ReversiPlugin</class>
     <minSparkVersion>2.7.0</minSparkVersion>
     <java>1.7.0</java>
