--- a/plugins/transferguard/src/main/plugin-metadata/plugin.xml
+++ b/plugins/transferguard/src/main/plugin-metadata/plugin.xml
@@ -1,11 +1,11 @@
 <!-- Define your plugins -->
 <plugin>
-    <name>Transfer Guard</name>
-    <version>1.1.0</version>
+    <name>${project.name}</name>
+    <version>${project.version}</version>
+    <description>${project.description}</description>
     <author>Pete Matern, Tim Jentz</author>
     <homePage>http://www.jivesoftware.org</homePage>
     <email>pete@jivesoftware.com</email>
-    <description>Adds the ability to automatically reject file transfers based on preference configuration</description>
     <class>org.jivesoftware.spark.plugins.transfersettings.FileTransferSettingsPlugin</class>
     <minSparkVersion>2.7.0</minSparkVersion>
     <java>1.7.0</java>
