--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,7 +24,7 @@
                 <configuration>
                     <excludes>
                         <exclude>**/org/jivesoftware/sparkimpl/preference/media/*</exclude>
-                        <exclude>**/org/jivesoftware/sparkimpl/plugin/phone/JMFInit.*gi</exclude>
+                        <exclude>**/org/jivesoftware/sparkimpl/plugin/phone/JMFInit.*</exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -37,6 +37,13 @@
                         <manifest>
                             <mainClass>org.jivesoftware.launcher.Startup</mainClass>
                         </manifest>
+                        <manifestEntries>
+                            <Implementation-Title>Spark</Implementation-Title>
+                            <Implementation-Version>${project.version}</Implementation-Version>
+                            <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
+                            <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
+                            <Implementation-URL>https://www.igniterealtime.org/projects/spark/</Implementation-URL>
+                        </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
