SPARK-1897 removed Spark from the names

--- a/plugins/battleships/pom.xml
+++ b/plugins/battleships/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>battleships</artifactId>
     <version>0.2</version>
 
-    <name>Spark Battleships Plugin</name>
+    <name>Battleships Plugin</name>
     <description>An implementation of the classic Battleships guessing game.</description>
 
     <contributors>
