--- a/plugins/apple/pom.xml
+++ b/plugins/apple/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>apple</artifactId>
     <version>3.0</version>
 
-    <name>Spark Apple Plugin</name>
+    <name>Apple Plugin</name>
     <description>Provides Mac OS X features for Spark.</description>
 
     <contributors>
