--- a/plugins/meet/pom.xml
+++ b/plugins/meet/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>meet</artifactId>
     <version>0.0.3</version>
 
-    <name>Spark Meetings Plugin</name>
+    <name>Meetings Plugin</name>
     <description>Adds support for Openfire Meetings to the Spark IM client.</description>
 
     <contributors>
