--- a/plugins/systemtray/pom.xml
+++ b/plugins/systemtray/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>systemtray</artifactId>
     <version>1.1</version>
 
-    <name>Spark SystemTray Plugin</name>
+    <name>SystemTray Plugin</name>
     <description>Notification and System Tray Plugin for Spark.</description>
 
     <contributors>
