--- a/plugins/tictactoe/pom.xml
+++ b/plugins/tictactoe/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>tictactoe</artifactId>
     <version>0.2</version>
 
-    <name>Spark TicTacToe Plugin</name>
+    <name>TicTacToe Plugin</name>
     <description>The most sophisticated TicTacToe Game ever created.</description>
 
     <contributors>
