--- a/plugins/flashing/pom.xml
+++ b/plugins/flashing/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>flashing</artifactId>
     <version>1.2</version>
 
-    <name>Flashing Plugin</name>
+    <name>Window Flashing Plugin</name>
     <description>Flashes window on new messages (Microsoft Windows only).</description>
 
     <contributors>
