--- a/plugins/reversi/pom.xml
+++ b/plugins/reversi/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>reversi</artifactId>
     <version>1.4</version>
 
-    <name>Reversi Plugin</name>
+    <name>Reversi</name>
     <description>Multiplayer game of Reversi.</description>
 
     <contributors>
