--- a/plugins/roar/pom.xml
+++ b/plugins/roar/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>roar</artifactId>
     <version>0.5.0</version>
 
-    <name>Roar Plugin</name>
+    <name>Roar!!!</name>
     <description>Provides customizable popup/notification functionality.</description>
 
     <contributors>
