--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -51,6 +51,8 @@ SSO_DISABLED = false
 PKI_DISABLED = false
 #Removes Proxy Tab
 PROXY_DISABLED = false
+#Removes Certificates Tab
+CERTIFICATES_MANAGER_DISABLED = false
 
 
 # Show Password Reset Button on LoginDialog. 
