--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -52,7 +52,7 @@ PKI_DISABLED = false
 #Removes Proxy Tab
 PROXY_DISABLED = false
 #Removes Certificates Tab
-CERTIFICATES_MANAGER_DISABLED = true
+CERTIFICATES_MANAGER_DISABLED = false
 
 
 # Show Password Reset Button on LoginDialog. 
