SPARK-1965: Replace emoticon archives with separate files in version control
Instead of adding the zip files to git, this commit adds the unzipped content, and ensures that the Maven build generates the zip files. This way, editing is a lot easier, and changes are better tracked.

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
 
     <modules>
         <module>core</module>
+        <module>emoticons</module>
         <module>plugins/assembly-descriptor</module>
         <!--<module>plugins/battleships</module>-->
         <module>plugins/apple</module>
