SPARK-1946 add option to disable start a chat

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -99,6 +99,9 @@ DISABLE_PRESENCE_STATUS_CHANGE = false
 # If true, disable all "Broadcast" menu items
 DISABLE_BROADCAST_MENU_ITEM = false
 
+#if true, hide Start a chat option in Actions menu
+HIDE_START_A_CHAT = false
+
 # If true, remove the "Avatar" tab in profile dialog
 DISABLE_AVATAR_TAB = false
 
