SPARK-1985 Mutual Authentication

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -53,7 +53,8 @@ PKI_DISABLED = false
 PROXY_DISABLED = false
 #Removes Certificates Tab
 CERTIFICATES_MANAGER_DISABLED = false
-
+#Removes Mutual Authentication Tab
+MUTUAL_AUTH_DISABLED = false
 
 # Show Password Reset Button on LoginDialog. 
 # !!!! This will repleace the "register new user" button, please set ACCOUNT_DISABLED = true !!!!
