SPARK-2000 Default Settings and lacking resource for mutual.auth

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -56,6 +56,38 @@ CERTIFICATES_MANAGER_DISABLED = false
 #Removes Mutual Authentication Tab
 MUTUAL_AUTH_DISABLED = false
 
+#
+# This are default settings in LoginSettingsDialog tabs
+# General
+HOST_AND_PORT_CONFIGURED = false
+XMPP_PORT = 5222
+USE_HOSTNAME_AS_RESOURCE = false
+USE_VERSION_AS_RESOURCE = false
+TIME_OUT = 10
+COMPRESSION_ENABLED = false
+DEBUGGER_ENABLED = false
+#Security tab
+DISABLE_HOSTNAME_VERIFICATION = false
+ALLOW_CLIENT_SIDE_AUTH = false
+SECURITY_MODE = ifpossible
+OLD_SSL_ENABLED = false
+#PROXY
+PROXY_ENABLED = false
+#SSO
+USE_SSO = false
+USE_SASL_GSS_API_SMACK_3_COMPATIBLE = false
+SSO_METHOD = file
+# Certificate ManagerSettingsPanel
+ACCEPT_ALL = false
+ACCEPT_EXPIRED = false
+ACCEPT_NOT_VALID_YET = false
+ACCEPT_SELF_SIGNED = false
+ACCEPT_REVOKED = false
+CHECK_CRL = true
+CHECK_OCSP = true
+ALLOW_SOFT_FAIL = true
+
+
 # Show Password Reset Button on LoginDialog. 
 # !!!! This will repleace the "register new user" button, please set ACCOUNT_DISABLED = true !!!!
 PASSWORD_RESET_ENABLED = false
