SPARK-1869 Add option to force In-band bytesteams for file transfers

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -183,6 +183,9 @@ FILE_TRANSFER_WARNING_SIZE = -1
 # maximum is 9223372036854775806 byte = 8.388.608 TB
 FILE_TRANSFER_MAXIMUM_SIZE = -1
 
+#Force inband bytestream only.
+FILE_TRANSFER_IBB_ONLY = true
+
 
 #################################################
 ################## Main Window ##################
