SPARK-2039: Keep non-encoded i18n files in source.

--- a/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n.properties
+++ b/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n.properties
@@ -108,9 +108,9 @@ book.noEntry	= "No Entry Selected!"
 book.fillFields = "Please fill all Fields"
 book.warning	= "Attention"
 title.sip.codecs.title = Codecs
-codecs.select 	= \u21E6 Select
-codecs.unselect = Unselect \u21E8
-codecs.up		= Up \u21E7
-codecs.down		= Down \u21E9
+codecs.select 	= ⇦ Select
+codecs.unselect = Unselect ⇨
+codecs.up		= Up ⇧
+codecs.down		= Down ⇩
 codecs.audio.selected	= Selected Audio Codecs
 codecs.audio.avail		= Available Audio Codecs
