--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <!--<module>plugins/battleships</module>-->
         <module>plugins/apple</module>
         <module>plugins/fastpath</module>
+        <module>plugins/fileupload</module>         
         <module>plugins/flashing</module>
         <module>plugins/growl</module>
         <!--<module>plugins/jingle</module>-->
