--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,6 +16,12 @@
 
     <build>
         <finalName>spark</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
