Use Smack 4.3.3-SNAPSHOT

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -250,6 +250,10 @@
     </dependencies>
 
     <repositories>
+      <repository>
+         <id>maven-snapshots-repo</id>
+         <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       </repository>
         <repository>
             <id>ej-technologies</id>
             <url>https://maven.ej-technologies.com/repository/</url>
