--- a/core/pom.xml
+++ b/core/pom.xml
@@ -140,24 +140,24 @@
         <dependency>
              <groupId>org.apache.commons</groupId>
              <artifactId>commons-lang3</artifactId>
-             <version>3.7</version>
+             <version>3.9</version>
          </dependency>
          <dependency>
             <groupId>org.swinglabs.swingx</groupId>
             <artifactId>swingx-all</artifactId>
-            <version>1.6.3</version>
+            <version>1.6.5-1</version>
         </dependency>
 
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
-            <version>4.3.0</version>
+            <version>5.2.0</version>
         </dependency>
 
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-            <version>1.2.2</version>
+            <version>1.4.11.1</version>
         </dependency>
 
         <dependency>
@@ -175,31 +175,31 @@
         <dependency>
             <groupId>jaxen</groupId>
             <artifactId>jaxen</artifactId>
-            <version>1.1.1</version>
+            <version>1.2.0</version>
         </dependency>
 
         <dependency>
             <groupId>com.teamdev.jxbrowser</groupId>
             <artifactId>jxbrowser-win</artifactId>
-            <version>6.14</version>
+            <version>6.20</version>
         </dependency>
 
         <dependency>
             <groupId>com.teamdev.jxbrowser</groupId>
             <artifactId>jxbrowser-linux32</artifactId>
-            <version>6.14</version>
+            <version>6.14.2</version>
         </dependency>
 
         <dependency>
             <groupId>com.teamdev.jxbrowser</groupId>
             <artifactId>jxbrowser-linux64</artifactId>
-            <version>6.14</version>
+            <version>6.23.1</version>
         </dependency>
 
         <dependency>
             <groupId>com.teamdev.jxbrowser</groupId>
             <artifactId>jxbrowser-mac</artifactId>
-            <version>6.14</version>
+            <version>6.23.1</version>
         </dependency>
 
         <dependency>
