--- a/core/pom.xml
+++ b/core/pom.xml
@@ -128,9 +128,9 @@
             <version>${dependency.smack.version}</version>
         </dependency>
         <dependency>
-            <groupId>dom4j</groupId>
+            <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
             <groupId>commons-httpclient</groupId>
@@ -246,6 +246,21 @@
             <artifactId>bctls-jdk15on</artifactId>
             <version>1.57</version>
         </dependency>
+        
+        <!-- API, java.xml.bind module -->
+<dependency>
+    <groupId>jakarta.xml.bind</groupId>
+    <artifactId>jakarta.xml.bind-api</artifactId>
+    <version>2.3.2</version>
+</dependency>
+
+<!-- Runtime, com.sun.xml.bind module -->
+<dependency>
+    <groupId>org.glassfish.jaxb</groupId>
+    <artifactId>jaxb-runtime</artifactId>
+    <version>2.3.2</version>
+</dependency>
+
     </dependencies>
 
     <repositories>
