--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.igniterealtime.spark</groupId>
     <artifactId>parent</artifactId>
-    <version>2.9.0</version>
+    <version>2.9.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Spark (parent)</name>
