--- a/plugins/translator/pom.xml
+++ b/plugins/translator/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.igniterealtime.spark.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.9.1-SNAPSHOT</version>
+        <version>2.9.1</version>
         <relativePath>../plugin/pom.xml</relativePath>
     </parent>
 
