SPARK-2190: Add option to auto-accept file transfers
This commit adds as setting (disabled by default) that will automatically accept a file transfer from a sender that is on the user's contact list (more specifically, that is subscribed to the presence of the local user).

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -185,6 +185,8 @@ FILE_TRANSFER_MAXIMUM_SIZE = -1
 # Force in-band bytestream only.
 FILE_TRANSFER_IBB_ONLY = true
 
+# Automatically accept file transfer offers from people that have presence subscribtion
+FILE_TRANSFER_AUTO_ACCEPT_PRESENCE = false
 
 #################################################
 ################## Main Window ##################
