No project lead

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
     <contributors>
         <contributor>
-            <name>Oleg "Wroot"</name>
+            <name>Vacant</name>
             <roles>
                 <role>Project Lead</role>
             </roles>
